--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <!-- Your content here -->
                         <div>
                             <!-- Your content here -->
-                            <img src="../Website/images/skills.png" alt="Content 1" style="width: 100%; height: auto;">
+                            <img src="../britny/images/skills.png" alt="Content 1" style="width: 100%; height: auto;">
                             <h1 class="h1">Background</h1>
                             <p class="backgroundp">Hi, I'm Britny, a Portland-based software developer passionate about backend programming in Python and C#. 
                                 Since 2017, I've been learning and honing my skills, showcased in my GitHub portfolio. From websites to algorithms and chatbots, 
