--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                             <img src="../britny/images/skills.png" alt="Content 1" style="width: 100%; height: auto;">
                             <h1 class="h1">Background</h1>
                             <p class="backgroundp">Hi, I'm Britny, a Portland-based software developer passionate about backend programming in Python and C#. 
-                                Since 2017, I've been learning and honing my skills, showcased in my GitHub portfolio. From websites to algorithms and chatbots, 
+                                Since 2017, I've been learning and honing my skills, showcased in my <a href="https://github.com/bortega90">GitHub</a> portfolio. From websites to algorithms and chatbots, 
                                 I'v turned my ideas into reality. Let's collaborate, expand skills, and make an impact in the digital world—one line of code at a time. 
                                 
                                 </p>
