updated contact form
updated contact form and made backdrop translucent

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
 
             <footer>
-                <p class="center">&copy <a href="https://github.com/bortega90" target="_blank">Britny Ortega's Portfolio</a></p>
+                <p class="center">&copy <a>Britny Ortega's Portfolio</a></p>
             </footer>
             <script src="js/js.js"></script>
         </div>
