--- a/index.html
+++ b/index.html
@@ -112,10 +112,11 @@
             </div>
 
 
-            <footer>
-                <p class="center">&copy <a>Britny Ortega's Portfolio</a></p>
-            </footer>
+            
             <script src="js/js.js"></script>
         </div>
     </body>
+    <!-- <footer>
+        <p class="center">&copy <a>2024</a></p>
+    </footer> -->
 </html>
